# gopad-python

./: .codacy.yml  .drone.yml  .releaserc  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  flake.nix  openapi.yml  pyproject.toml  setup.py  tox.ini
.github/: RELEASE  pull_request_template.md  settings.yml
.github/workflows/: general.yml  openapi.yml  release.yml
.openapi-generator/: FILES
changelog/: TEMPLATE
changelog/unreleased/: initial-release.md
docs/: AuthApi.md  AuthLogin.md  AuthToken.md  AuthVerify.md  CreateGroupRequest.md  CreateUserRequest.md  DeleteGroupFromUserRequest.md  DeleteUserFromGroupRequest.md  Group.md  GroupApi.md  InlineObject.md  InlineObject1.md  InlineObject2.md  InlineObject3.md  InlineObject4.md  ListGroupUsers200Response.md  ListGroups200Response.md  ListProviders200Response.md  ListUserGroups200Response.md  ListUsers200Response.md  LoginAuthRequest.md  Notification.md  PermitGroupUserRequest.md  PermitUserGroupRequest.md  Profile.md  ProfileApi.md  Provider.md  RedirectAuthRequest.md  Team.md  TeamApi.md  TeamUserParams.md  TeamUsers.md  Teams.md  UpdateProfileRequest.md  UpdateUserRequest.md  User.md  UserApi.md  UserAuth.md  UserGroup.md  UserTeam.md  (+4 more)
gopad/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
gopad/api/: __init__.py  auth_api.py  group_api.py  profile_api.py  team_api.py  user_api.py
gopad/apis/: __init__.py
gopad/model/: auth_login.py  auth_token.py  auth_verify.py  general_error.py  profile.py  team.py  team_user.py  team_user_params.py  user.py  user_team_params.py  validation_error.py  validation_error_errors.py
gopad/models/: __init__.py  auth_login.py  auth_token.py  auth_verify.py  general_error.py  inline_object.py  inline_object1.py  inline_object2.py  inline_object3.py  inline_object4.py  list_group_users200_response.py  list_groups200_response.py  list_providers200_response.py  list_user_groups200_response.py  list_users200_response.py  notification.py  profile.py  team.py  team_user.py  team_user_params.py  user.py  user_team_params.py  validation_error.py  validation_error_errors.py
hack/: generate-client.sh  semantic-version.sh
hack/openapi/templates/: README.mustache  README_common.mustache  common_README.mustache  gitignore.mustache  setup.mustache
test/: test_auth_api.py  test_auth_login.py  test_auth_token.py  test_auth_verify.py  test_create_group_request.py  test_create_user_request.py  test_delete_group_from_user_request.py  test_delete_user_from_group_request.py  test_general_error.py  test_group.py  test_group_api.py  test_inline_object.py  test_inline_object1.py  test_inline_object2.py  test_inline_object3.py  test_inline_object4.py  test_list_group_users200_response.py  test_list_groups200_response.py  test_list_providers200_response.py  test_list_user_groups200_response.py  test_list_users200_response.py  test_login_auth_request.py  test_notification.py  test_permit_group_user_request.py  test_permit_user_group_request.py  test_profile.py  test_profile_api.py  test_provider.py  test_redirect_auth_request.py  test_team.py  test_team_api.py  test_team_user.py  test_team_user_params.py  test_team_users.py  test_teams.py  test_update_profile_request.py  test_update_user_request.py  test_user.py  test_user_api.py  test_user_auth.py  (+8 more)
